[gd_scene format=3 uid="uid://t15nwyfmpfja"]

[ext_resource type="Script" uid="uid://q45uycndain1" path="res://npc/npc.gd" id="1_ul7y6"]
[ext_resource type="Texture2D" uid="uid://fxmdk7ovcsnx" path="res://npc/angrynpcwalk-Sheet-export.png" id="2_bc6q4"]
[ext_resource type="Texture2D" uid="uid://bdxw18cpa7kvl" path="res://npc/defaultnpcwalk-Sheet.png" id="2_ul7y6"]
[ext_resource type="FontFile" uid="uid://v130t0q7i60u" path="res://04B_03_.TTF" id="3_mcvl2"]
[ext_resource type="Texture2D" uid="uid://dbqyak24wiv3f" path="res://warning.png" id="4_d61ma"]

[sub_resource type="AtlasTexture" id="AtlasTexture_215dd"]
atlas = ExtResource("2_bc6q4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5bpe"]
atlas = ExtResource("2_bc6q4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_upjdb"]
atlas = ExtResource("2_bc6q4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u41a8"]
atlas = ExtResource("2_bc6q4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgete"]
atlas = ExtResource("2_bc6q4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu3sj"]
atlas = ExtResource("2_bc6q4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul7y6"]
atlas = ExtResource("2_ul7y6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l64hl"]
atlas = ExtResource("2_ul7y6")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc6q4"]
atlas = ExtResource("2_ul7y6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcvl2"]
atlas = ExtResource("2_ul7y6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d61ma"]
atlas = ExtResource("2_ul7y6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_slxoh"]
atlas = ExtResource("2_ul7y6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kek77"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_215dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5bpe")
}],
"loop": true,
"name": &"angryidle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_upjdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u41a8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgete")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu3sj")
}],
"loop": true,
"name": &"angrywalk",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul7y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l64hl")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc6q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcvl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d61ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slxoh")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4c57u"]

[sub_resource type="Animation" id="Animation_272bh"]
resource_name = "1"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(-3.606, 1, 6)]
}

[sub_resource type="Animation" id="Animation_074og"]
resource_name = "10"
length = 1.4333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.4333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(3.732, 1, -6.197), Vector3(3.732, 1, -1.895)]
}

[sub_resource type="Animation" id="Animation_cegan"]
resource_name = "11"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.99999994, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(3.732, 1, -6.197), Vector3(3.7320004, 1, 2.1050005)]
}

[sub_resource type="Animation" id="Animation_82xsv"]
resource_name = "12"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(3.732, 1, -6.197), Vector3(3.7320004, 1, 6.1050005)]
}

[sub_resource type="Animation" id="Animation_bc6q4"]
resource_name = "1leave"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-3.606, 1, 6), Vector3(-4.10732, 1.0000005, 11.454841), Vector3(-18.002, 1, 11.455)]
}

[sub_resource type="Animation" id="Animation_5vw27"]
resource_name = "2"
length = 1.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(-3.606, 1, 2)]
}

[sub_resource type="Animation" id="Animation_mcvl2"]
resource_name = "2leave"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666668, 1, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-3.606, 1, 2), Vector3(-2.8, 1, 2), Vector3(-4.10732, 1.0000005, 11.454841), Vector3(-18.002, 1, 11.455)]
}

[sub_resource type="Animation" id="Animation_kek77"]
resource_name = "3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(-3.606, 1, -2)]
}

[sub_resource type="Animation" id="Animation_d61ma"]
resource_name = "3leave"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-3.606, 1, -2), Vector3(-2.8, 1, -2), Vector3(-4.10732, 1.0000005, 11.454841), Vector3(-18.002, 1, 11.455)]
}

[sub_resource type="Animation" id="Animation_ycdy4"]
resource_name = "4"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(-1.696, 1, -2)]
}

[sub_resource type="Animation" id="Animation_slxoh"]
resource_name = "4leave"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.696, 1, -2), Vector3(-2.8, 1, -1.144), Vector3(-4.10732, 1.0000005, 11.454841), Vector3(-18.002, 1, 11.455)]
}

[sub_resource type="Animation" id="Animation_w48qg"]
resource_name = "5"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(-1.696, 1, 2)]
}

[sub_resource type="Animation" id="Animation_l64hl"]
resource_name = "5leave"
length = 2.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.30000007, 1.2, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.696, 1, 2), Vector3(-2.8, 1, 2), Vector3(-4.10732, 1.0000005, 11.454841), Vector3(-18.002, 1, 11.455)]
}

[sub_resource type="Animation" id="Animation_4c57u"]
resource_name = "4"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(-1.696, 1, 6)]
}

[sub_resource type="Animation" id="Animation_215dd"]
resource_name = "6leave"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(-1.696, 1, 6)]
}

[sub_resource type="Animation" id="Animation_vivmo"]
resource_name = "7"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8666667, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(1.892, 1, -6.197), Vector3(1.892, 1, 6.105)]
}

[sub_resource type="Animation" id="Animation_getpj"]
resource_name = "8"
length = 1.7333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8666667, 1.7333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(1.892, 1, -6.197), Vector3(1.8920002, 1, 2.105)]
}

[sub_resource type="Animation" id="Animation_ryguw"]
resource_name = "9"
length = 1.3666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8666667, 1.3666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-3.5884495, 1, -6.1971617), Vector3(1.892, 1, -6.197), Vector3(1.8920002, 1, -1.8949995)]
}

[sub_resource type="Animation" id="Animation_efxa6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(8.832951, 1, 10.689069)]
}

[sub_resource type="Animation" id="Animation_dg77c"]
resource_name = "walk through door"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7666667, 2, 2.3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(8.832951, 1, 10.689069), Vector3(-3.811, 1, 10.689), Vector3(-3.9858797, 1, 9.728836), Vector3(-2.60705, 1, 8.266766), Vector3(-2.60705, 1, -3.5473814), Vector3(-3.5884495, 1, -6.1971617)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ycdy4"]
_data = {
&"1": SubResource("Animation_272bh"),
&"10": SubResource("Animation_074og"),
&"11": SubResource("Animation_cegan"),
&"12": SubResource("Animation_82xsv"),
&"1leave": SubResource("Animation_bc6q4"),
&"2": SubResource("Animation_5vw27"),
&"2leave": SubResource("Animation_mcvl2"),
&"3": SubResource("Animation_kek77"),
&"3leave": SubResource("Animation_d61ma"),
&"4": SubResource("Animation_ycdy4"),
&"4leave": SubResource("Animation_slxoh"),
&"5": SubResource("Animation_w48qg"),
&"5leave": SubResource("Animation_l64hl"),
&"6": SubResource("Animation_4c57u"),
&"6leave": SubResource("Animation_215dd"),
&"7": SubResource("Animation_vivmo"),
&"8": SubResource("Animation_getpj"),
&"9": SubResource("Animation_ryguw"),
&"RESET": SubResource("Animation_efxa6"),
&"walk through door": SubResource("Animation_dg77c")
}

[sub_resource type="Animation" id="Animation_2cqfq"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.335, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:outline_modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_yaehf"]
resource_name = "subtle rise"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, 0, 3.5, 0, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0.33333334, 0.7)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1.2559988, -0.25, 0, 0.333, 1.544, 1.4999998, 0, 0, 0.333, 1.544),
"times": PackedFloat32Array(0, 0.7)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:outline_modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.05555556, 0.16666669, 0, 0, 0, -0.061111107, 0, 0, 0),
"times": PackedFloat32Array(0.033333335, 0.36666667, 0.73333335)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_074og"]
_data = {
&"RESET": SubResource("Animation_2cqfq"),
&"subtle rise": SubResource("Animation_yaehf")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_ul7y6"]
size = Vector3(3, 3.559, 3)

[node name="NPC" type="AnimatableBody3D" unique_id=756004745]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.832951, 1, 10.689069)
script = ExtResource("1_ul7y6")

[node name="sprite" type="AnimatedSprite3D" parent="." unique_id=866452404]
transform = Transform3D(3.5, 0, 0, 0, 3.5, 0, 0, 0, 3.5, 0, 0, 0)
offset = Vector2(0, 3.81)
billboard = 2
alpha_cut = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_kek77")
animation = &"angrywalk"
frame_progress = 0.4855691

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1320725289]
shape = SubResource("CapsuleShape3D_4c57u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1724833379]
libraries/ = SubResource("AnimationLibrary_ycdy4")

[node name="TextAnimator" type="AnimationPlayer" parent="." unique_id=610308086]
libraries/ = SubResource("AnimationLibrary_074og")

[node name="Label" type="Label3D" parent="." unique_id=647648926]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 1.335, 0)
billboard = 1
no_depth_test = true
fixed_size = true
texture_filter = 0
modulate = Color(0, 1, 0.26666665, 1)
text = "$50"
font = ExtResource("3_mcvl2")

[node name="ProblemTimer" type="Timer" parent="." unique_id=2124491066]
wait_time = 3.0

[node name="warning" type="Sprite3D" parent="." unique_id=393913893]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 1.8985028, 0)
billboard = 1
no_depth_test = true
fixed_size = true
texture_filter = 0
texture = ExtResource("4_d61ma")

[node name="Area3D" type="Area3D" parent="." unique_id=577732219]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=774133986]
shape = SubResource("BoxShape3D_ul7y6")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="TextAnimator" to="." method="_on_text_animator_animation_finished"]
[connection signal="timeout" from="ProblemTimer" to="." method="_on_problem_timer_timeout"]
